k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /myapp
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:
                  number: 8080
          - path: /orderservice
            pathType: Prefix
            backend:
              service:
                name: orderservice-service
                port:
                  number: 8000
    - host: perchases.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: perchases-service
                port:
                  number: 8091
